--- a/package.json
+++ b/package.json
@@ -1,4 +1,9 @@
 {
+  "name": "koaflix2.0",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+
   "dependencies": {
     "dotenv": "^16.0.3",
     "firebase": "^9.18.0",
